Do Some work on UI

--- a/RiceMill.Ui/AppShell.xaml
+++ b/RiceMill.Ui/AppShell.xaml
@@ -7,8 +7,6 @@
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+        ContentTemplate="{DataTemplate local:LoginPage}"
+        Route="LoginPage" />
 </Shell>
