--- a/RiceMill.Ui/Pages/LoginPage.xaml
+++ b/RiceMill.Ui/Pages/LoginPage.xaml
@@ -61,7 +61,7 @@
         <ActivityIndicator
             x:Name="AciLoginProgress"
             HorizontalOptions="Center"
-            IsRunning="True"
+            IsRunning="False"
             Margin="100"
             Color="ForestGreen"/>
 
