--- a/RiceMill.Ui/Pages/TabbedPages/DashboardPage.xaml
+++ b/RiceMill.Ui/Pages/TabbedPages/DashboardPage.xaml
@@ -12,7 +12,7 @@
 
     </ContentPage.Behaviors>
 
-    <VerticalStackLayout>
+    <VerticalStackLayout BackgroundColor="Violet">
         <Label
             Text="به داشبورد خوش آمدید"
             FontSize="24"
