--- a/RiceMill.Ui/Pages/TabbedPages/InputOutputPage.xaml
+++ b/RiceMill.Ui/Pages/TabbedPages/InputOutputPage.xaml
@@ -12,14 +12,39 @@
 
     </ContentPage.Behaviors>
 
-    <VerticalStackLayout>
-        <Label
-            Text="به ورود و خروج خوش آمدید"
-            FontSize="24"
-            HorizontalOptions="Center"
-            VerticalOptions="Center"
-            Padding="10"/>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-    </VerticalStackLayout>
+        <Button x:Name="BtnDeliveries"
+                Grid.Column="0" 
+                Grid.Row="2" 
+                Text="تحویل برنج" 
+                TextColor="White" 
+                BackgroundColor="#3D9970"
+                CornerRadius="30"
+                WidthRequest="150"
+                Margin="40"
+                Clicked="OnBtnDeliveriesClicked"/>
+
+        <Button x:Name="BtnInputLoads"
+                Grid.Column="1"
+                Grid.Row="2"
+                Text="دریافت شالی" 
+                TextColor="White"
+                BackgroundColor="#3D9970"
+                CornerRadius="30"
+                WidthRequest="150"
+                Margin="40"
+                Clicked="OnBtnInputLoadsClicked"/>
+
+    </Grid>
 
 </ContentPage>
