--- a/RiceMill.Ui/Pages/Concern/ConcernListPage.xaml
+++ b/RiceMill.Ui/Pages/Concern/ConcernListPage.xaml
@@ -4,49 +4,126 @@
              xmlns:local="clr-namespace:RiceMill.Ui.Pages.Concern"
              x:Class="RiceMill.Ui.Pages.Concern.ConcernListPage"
              NavigationPage.HasNavigationBar="False"
-             xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui"
-             Title="دلایل">
+             xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
 
     <Grid>
-        <StackLayout VerticalOptions="Start" Padding="20">
-            <Label x:Name="LblTitle" 
-                   Text="عنوان"
-                   FontAttributes="Bold" />
-            
-            <Entry x:Name="EntryTitle" 
-                   FlowDirection="RightToLeft"
-                   MaxLength="50"
-                   FontAttributes="Bold"
-                   ClearButtonVisibility="WhileEditing"/>
-            
-            <Button Text="ذخیره" 
-                    CornerRadius="25"
-                    Clicked="SaveButton_Clicked" />
-        </StackLayout>
 
-        <CollectionView VerticalOptions="FillAndExpand" Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <Frame Grid.Row="0"
+               Padding="5"
+               BorderColor="#3D9970"
+               CornerRadius="20"
+               Margin="5">
+
+            <StackLayout HeightRequest="110" 
+                         Padding="5">
+
+                <Grid FlowDirection="RightToLeft">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label x:Name="LblTitle" 
+                           Text="عنوان :" 
+                           Grid.Row="0" 
+                           Grid.Column="0" 
+                           VerticalOptions="Center" 
+                           FontAttributes="Bold" />
+
+                    <Entry x:Name="EntryTitle"
+                           Placeholder="عنوان دلیل"
+                           MaxLength="50"
+                           Grid.Row="0" 
+                           Grid.Column="1"
+                           VerticalOptions="Center" 
+                           ClearButtonVisibility="WhileEditing"
+                           FontAttributes="Bold"/>
+
+                    <Button x:Name="BtnSave"
+                            Text="ذخیره" 
+                            WidthRequest="150"
+                            BackgroundColor="#3D9970"
+                            CornerRadius="20"
+                            Grid.Row="1" 
+                            FontAttributes="Bold"
+                            Grid.ColumnSpan="2"
+                            Clicked="OnBtnSaveClicked" />
+                </Grid>
+            </StackLayout>
+        </Frame>
+
+        <CollectionView x:Name="ConcernCollectionView"
+                        VerticalOptions="FillAndExpand"
+                        FlowDirection="RightToLeft"
+                        Margin="20"
+                        Grid.Row="1"
+                        SelectionMode="Single">
+            
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Label Text="{Binding}" Margin="0,5" />
+                    <Label Text="{Binding Title}"
+                           Margin="3" 
+                           Padding="10"
+                           MinimumHeightRequest="30"
+                           VerticalTextAlignment="Center"
+                           BackgroundColor="LightGray"
+                           TextColor="Black"/>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
+            
         </CollectionView>
 
-        <StackLayout Grid.Row="1" 
-                     Orientation="Horizontal"
-                     HorizontalOptions="CenterAndExpand"
-                     VerticalOptions="End" 
-                     Padding="20">
-            
-            <Button Text="جدید" 
-                    CornerRadius="25"
-                    Clicked="NewButton_Clicked" />
-            
-            <Button Text="حذف" 
-                    CornerRadius="25"
-                    Clicked="RemoveButton_Clicked" />
-            
-        </StackLayout>
+        <Frame Grid.Row="2"
+               Padding="10"
+               BorderColor="#3D9970"
+               CornerRadius="20"
+               Margin="5">
+
+            <StackLayout HeightRequest="50" 
+                         Padding="5">
+
+                <Grid FlowDirection="RightToLeft">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button x:Name="BtnRemove"
+                            Text="حذف" 
+                            BackgroundColor="#3D9970"
+                            CornerRadius="20"
+                            Grid.Row="0" 
+                            Grid.Column="1" 
+                            FontAttributes="Bold"
+                            Margin="5,0,5,0"
+                            Clicked="OnBtnRemoveClicked" />
+
+                    <Button x:Name="BtnNew"
+                            Text="جدید" 
+                            BackgroundColor="#3D9970"
+                            CornerRadius="20"
+                            Grid.Row="0" 
+                            Grid.Column="0"
+                            FontAttributes="Bold"
+                            Margin="5,0,5,0"
+                            Clicked="OnNewBtnClicked" />
+                </Grid>
+            </StackLayout>
+        </Frame>
     </Grid>
-    
 </ContentPage>
