--- a/RiceMill.Ui/Pages/Vehicle/VehicleListPage.xaml
+++ b/RiceMill.Ui/Pages/Vehicle/VehicleListPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:RiceMill.Ui.Pages.Concern"
-             x:Class="RiceMill.Ui.Pages.Concern.ConcernListPage"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             x:Class="RiceMill.Ui.Pages.Vehicle.VehicleListPage"
              NavigationPage.HasNavigationBar="False"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
 
@@ -20,31 +20,50 @@
                CornerRadius="20"
                Margin="5">
 
-            <StackLayout HeightRequest="110" 
+            <StackLayout HeightRequest="155" 
                          Padding="5">
 
                 <Grid FlowDirection="RightToLeft">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50"/>
+                        <RowDefinition Height="50" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label x:Name="LblTitle" 
-                           Text="عنوان :" 
+                    <Entry x:Name="TxtPlate"
+                           Placeholder="پلاک"
+                           MaxLength="9"
                            Grid.Row="0" 
-                           Grid.Column="0" 
+                           Grid.Column="1"
                            VerticalOptions="Center" 
-                           FontAttributes="Bold" />
+                           ClearButtonVisibility="WhileEditing"
+                           FontAttributes="Bold"/>
 
-                    <Entry x:Name="TxtTitle"
-                           Placeholder="عنوان دلیل"
-                           MaxLength="50"
-                           Grid.Row="0" 
+                    <Picker x:Name="PickerType"
+                            Grid.Row="0" 
+                            Grid.Column="0"
+                            Title="نوع وسیله نقلیه"
+                            VerticalOptions="Center" 
+                            ItemDisplayBinding="{Binding Title}" 
+                            FontAttributes="Bold"/>
+
+                    <Picker x:Name="PickerOwner"
+                            Grid.Row="1" 
+                            Grid.Column="0"
+                            Title="صاحب وسیله نقلیه"
+                            VerticalOptions="Center"        
+                            ItemDisplayBinding="{Binding FullName}" 
+                            FontAttributes="Bold"/>
+
+                    <Entry x:Name="TxtDescription"
+                           Placeholder="توضیحات"
+                           MaxLength="200"
+                           Grid.Row="1" 
                            Grid.Column="1"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
@@ -55,7 +74,7 @@
                             WidthRequest="150"
                             BackgroundColor="#3D9970"
                             CornerRadius="20"
-                            Grid.Row="1" 
+                            Grid.Row="2" 
                             FontAttributes="Bold"
                             Grid.ColumnSpan="2"
                             Clicked="OnBtnSaveClicked" />
@@ -63,34 +82,38 @@
             </StackLayout>
         </Frame>
 
-        <CollectionView x:Name="CVConcern"
+        <CollectionView x:Name="CVVehicle"
                         VerticalOptions="FillAndExpand"
                         FlowDirection="RightToLeft"
                         Margin="20"
                         Grid.Row="1"
                         SelectionMode="Single"
-                        SelectionChanged="OnCVConcernSelectionChanged">
+                        SelectionChanged="OnCVVehicleSelectionChanged">
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
                             <RowDefinition Height="1"/>
                         </Grid.RowDefinitions>
-                        
-                        <Label Text="{Binding Title}"
-                               Margin="3" 
-                               Padding="10"
-                               MinimumHeightRequest="30"
+
+                        <Label Text="{Binding HumaneReadable}"
+                               Padding="3"
                                VerticalTextAlignment="Center"
-                               Grid.RowSpan="2"
+                               FontAttributes="Bold"
+                               Grid.RowSpan="1"
                                Grid.Row="0"/>
+
+                        <Label Text="{Binding OwnerFullName}"
+                               Padding="6"
+                               VerticalTextAlignment="Center"
+                               Grid.Row="1"/>
                         
                         <BoxView HeightRequest="1"
                                  BackgroundColor="Black"
-                                 Grid.RowSpan="2"
-                                 Grid.Row="1"
+                                 Grid.Row="2"
                                  VerticalOptions="End"/>
                     </Grid>
                 </DataTemplate>
