--- a/RiceMill.Ui/Pages/Village/VillageListPage.xaml
+++ b/RiceMill.Ui/Pages/Village/VillageListPage.xaml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:RiceMill.Ui.Pages.Concern"
-             x:Class="RiceMill.Ui.Pages.Concern.ConcernListPage"
+             x:Class="RiceMill.Ui.Pages.Village.VillageListPage"
              NavigationPage.HasNavigationBar="False"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
 
@@ -42,8 +41,8 @@
                            FontAttributes="Bold" />
 
                     <Entry x:Name="TxtTitle"
-                           Placeholder="عنوان دلیل"
-                           MaxLength="50"
+                           Placeholder="عنوان مبدا"
+                           MaxLength="30"
                            Grid.Row="0" 
                            Grid.Column="1"
                            VerticalOptions="Center" 
@@ -63,13 +62,13 @@
             </StackLayout>
         </Frame>
 
-        <CollectionView x:Name="CVConcern"
+        <CollectionView x:Name="CVVillage"
                         VerticalOptions="FillAndExpand"
                         FlowDirection="RightToLeft"
                         Margin="20"
                         Grid.Row="1"
                         SelectionMode="Single"
-                        SelectionChanged="OnCVConcernSelectionChanged">
+                        SelectionChanged="OnCVVillageSelectionChanged">
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
@@ -78,7 +77,7 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="1"/>
                         </Grid.RowDefinitions>
-                        
+
                         <Label Text="{Binding Title}"
                                Margin="3" 
                                Padding="10"
@@ -86,7 +85,7 @@
                                VerticalTextAlignment="Center"
                                Grid.RowSpan="2"
                                Grid.Row="0"/>
-                        
+
                         <BoxView HeightRequest="1"
                                  BackgroundColor="Black"
                                  Grid.RowSpan="2"
