--- a/RiceMill.Ui/Pages/RiceMill/RiceMillListPage.xaml
+++ b/RiceMill.Ui/Pages/RiceMill/RiceMillListPage.xaml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RiceMill.Ui.Pages.Dryer.DryerListPage"
+             x:Class="RiceMill.Ui.Pages.RiceMill.RiceMillListPage"
              NavigationPage.HasNavigationBar="False"
              xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
-
     <Grid>
 
         <Grid.RowDefinitions>
@@ -19,29 +18,91 @@
                CornerRadius="20"
                Margin="5">
 
-            <StackLayout HeightRequest="110" 
+            <StackLayout HeightRequest="155" 
                          Padding="5">
 
                 <Grid FlowDirection="RightToLeft">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50"/>
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="50" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
                     <Entry x:Name="TxtTitle"
-                           Placeholder="عنوان خشک کن"
-                           MaxLength="30"
+                           Placeholder="عنوان"
+                           MaxLength="60"
                            Grid.Row="0" 
+                           Grid.Column="0"
                            VerticalOptions="Center" 
                            ClearButtonVisibility="WhileEditing"
                            FontAttributes="Bold"/>
+                    
+                    <Entry x:Name="TxtDescription"
+                           Placeholder="توضیحات"
+                           MaxLength="200"
+                           Grid.Row="0" 
+                           Grid.Column="1"
+                           VerticalOptions="Center" 
+                           ClearButtonVisibility="WhileEditing"
+                           FontAttributes="Bold"/>
+                    
+                    <Entry x:Name="TxtAddress"
+                           Placeholder="آدرس"
+                           MaxLength="200"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           VerticalOptions="Center" 
+                           ClearButtonVisibility="WhileEditing"
+                           FontAttributes="Bold"/>
+
+                    <Entry x:Name="TxtWage"
+                           Placeholder="کارمزد"
+                           MaxLength="1"
+                           Grid.Row="1"
+                           Grid.Column="1"
+                           VerticalOptions="Center" 
+                           ClearButtonVisibility="WhileEditing"
+                           FontAttributes="Bold"/>
+
+                    <Entry x:Name="TxtPostalCode"
+                           Placeholder="کد پستی"
+                           MaxLength="10"
+                           Grid.Row="2"
+                           Grid.Column="0"
+                           VerticalOptions="Center" 
+                           ClearButtonVisibility="WhileEditing"
+                           FontAttributes="Bold"/>
+
+                    <Entry x:Name="Txtphone"
+                           Placeholder="تلفن"
+                           MaxLength="11"
+                           Grid.Row="2"
+                           Grid.Column="1"
+                           VerticalOptions="Center" 
+                           ClearButtonVisibility="WhileEditing"
+                           FontAttributes="Bold"/>
+
+                    <Picker x:Name="PickerOwner"
+                            Grid.Row="3" 
+                            Grid.Column="0"
+                            Title="صاحب کارخانه"
+                            VerticalOptions="Center"        
+                            ItemDisplayBinding="{Binding FullName}" 
+                            FontAttributes="Bold"/>
 
                     <Button x:Name="BtnSave"
                             Text="ذخیره" 
                             WidthRequest="150"
                             BackgroundColor="#3D9970"
                             CornerRadius="20"
-                            Grid.Row="1" 
+                            Grid.Row="4" 
                             FontAttributes="Bold"
                             Grid.ColumnSpan="2"
                             Clicked="OnBtnSaveClicked" />
@@ -49,34 +110,38 @@
             </StackLayout>
         </Frame>
 
-        <CollectionView x:Name="CVDryer"
+        <CollectionView x:Name="CVRiceMill"
                         VerticalOptions="FillAndExpand"
                         FlowDirection="RightToLeft"
                         Margin="20"
                         Grid.Row="1"
                         SelectionMode="Single"
-                        SelectionChanged="OnCVDryerSelectionChanged">
+                        SelectionChanged="OnCVRiceMillSelectionChanged">
 
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
                             <RowDefinition Height="1"/>
                         </Grid.RowDefinitions>
 
                         <Label Text="{Binding Title}"
-                               Margin="3" 
-                               Padding="10"
-                               MinimumHeightRequest="30"
+                               Padding="3"
                                VerticalTextAlignment="Center"
-                               Grid.RowSpan="2"
+                               FontAttributes="Bold"
+                               Grid.RowSpan="1"
                                Grid.Row="0"/>
+
+                        <Label Text="{Binding OwnerFullName}"
+                               Padding="6"
+                               VerticalTextAlignment="Center"
+                               Grid.Row="1"/>
 
                         <BoxView HeightRequest="1"
                                  BackgroundColor="Black"
-                                 Grid.RowSpan="2"
-                                 Grid.Row="1"
+                                 Grid.Row="2"
                                  VerticalOptions="End"/>
                     </Grid>
                 </DataTemplate>
